2009-05-15 yusei
* Remove my_text_content from generic field dict in SkinsTool_makeFieldLibraryAndProxifyAllField. It was not generic enough for many editor fields.

2009-05-08 yusei
* Remove SkinsTool_findDeadProxyFieldList. There was already SkinsTool_getDeadProxyFieldList which do the same thing.
* Add a little bit user-friendly output to SkinsTool_makeFieldLibraryAndProxifyAllField.

2009-05-08 yusei
* Simplify field libraries and proxy fields. Old field libraries are kept for backward compatibility.
* Update dependencies.

2009-05-07 yusei
* Add SkinsTool_makeFieldLibraryAndProxifyAllField. This is a helper script to make a field library and proxify existing fields. But you still need to adjust by hand...
* Add a utility script to find dead proxy fields.

2009-04-24 jerome
* Add a utility script to check that all relation field defines proxy listbox id or columns

2009-02-20 yusei
* Add a utility script to associate files in skin folder to cache manager.

2008-12-26 kazuhiko
* add a listbox to see duplicate entries in Glossary view.
* add Portal Type -> Glossary importer.

2008-11-25 fabien
* add more columns in bug_module view to be able to sort by project, ...

2008-10-6 yusei
* Set original English term to a new term when create a new term from English ones.

2008-10-2 yusei
* Added a causality field to Glossary Term to specify a original English term.

2008-10-01 yusei
* Fixed UnboundLocalError in Bug_sendNotification.

2008-10-01 yusei
* Update xml format.

2008-10-01 yusei
* Fixed a bug in Bug_sendNotification in bug_workflow. Workflow history's action may be None.

2008-09-04 yusei
* Update English messages.

2008-09-03 yusei
* Don't extract title from field if tales expression was used.

2008-09-02 yusei
* Don't extract title from field libraries.

2008-09-02 nicolas
* add new transition to display Re Assign in workflow action
* Bug Notification can be send later to change recipient list
* Add File dialog require missing mandatory fields