@@ -1,5 +1,6 @@
 2009-05-15 yusei
 * Remove my_text_content from generic field dict in SkinsTool_makeFieldLibraryAndProxifyAllField. It was not generic enough for many editor fields.
+* Add my_editor_field to Base_viewForgeFieldLibrary.
 
 2009-05-08 yusei
 * Remove SkinsTool_findDeadProxyFieldList. There was already SkinsTool_getDeadProxyFieldList which do the same thing.
